# LongEmotion

./: .env.example  .gitignore  COMPLETION_REPORT.md  DATASET_INFO.md  DATASET_README_CN.md  DATA_DOWNLOAD_SUMMARY.md  QUICKSTART.md  README_DATASET.md  Readme.md  comparison_report.txt  download_dataset.py  evaluate.py  evaluate.sh  lmeval-instruct.md  pyproject.toml  requirements.txt  run.sh  test_load_data.py
LongEmotion/: evaluate.py  run_qwen.sh
LongEmotion/data/: Conversations_example.jsonl  Emotion_Classification_example.jsonl  Emotion_Detection_example.jsonl  Emotion_QA_example.jsonl  Emotion_Summary_example.jsonl
evaluations/: base.py  coem.py  qa_score.py  rag.py  searcho1.py  selfrag.py
prompts/aug_prompt/: emo_class_aug_Finentity.txt  multi_conv_gen_origin_rag.txt  qa_aug.txt  qa_gen.txt
prompts/gen_prompt/: emotion_detection_originrag.txt  multiconv_client_prompt.txt  questionnaire_prompt_1.txt  questionnaire_prompt_2.txt  questionnaire_prompt_3.txt  questionnaire_prompt_4.txt  questionnaire_prompt_5.txt  rag_Fileqa.txt
prompts/search_o1/: emotion_classification_system.txt  emotion_classification_user.txt  emotion_detection_system.txt  emotion_detection_user.txt  fileqa_system.txt  fileqa_user.txt  multicov_system.txt  multicov_user.txt  questionnaire_stage_1.txt  questionnaire_stage_2.txt  questionnaire_stage_3.txt  questionnaire_stage_4.txt  questionnaire_stage_5.txt  questionnaire_system.txt  questionnaire_user.txt  report_summary_system.txt  report_summary_user.txt
tasks/longemotion/: emotion_classification.yaml  emotion_detection.yaml  utils.py  (+5 more)
(+8 files in other folders)
