[project]
name = "longemotion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lm-eval[vllm]",
    "sentence-transformers==4.1.0",
    "transformers==4.51.3",
    "vllm==0.9.1",
]

[tool.uv.workspace]
members = [
    "lm-evaluation-harness",
]

[tool.uv.sources]
lm-eval = { workspace = true }

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
